# processor

./: .gitignore  CMakeLists.txt  README.adoc
src/: CMakeLists.txt  document.cpp  document.hpp  document_template.cpp  document_template.hpp  main.cpp  pch.hpp  string_utils.cpp  string_utils.hpp  tests.cpp  tests.hpp
tests/: basic-slot.html  basic.html  basic.md  basic.neng
